# thermal-tyre-driver

./: README.md  tyre_thermal_driver.py
pico/: FAST_LIBRARY_SUMMARY.md  INSTALLATION.md  INSTALL_CHECKLIST.md  MIGRATION.md  MLX90640_OPTIMIZATION.md  PERFORMANCE_REPORT.md  README.md  VISUALIZER_QUICKSTART.md  boot.py  code.py  code_debug.py  code_detailed_profile.py  code_profile.py  communication.py  example_i2c_controller.py  example_serial_only.py  investigate_subframes.py  main.py  mlx90640_fast.py  requirements.txt  requirements_visualizer.txt  test_8hz.py  test_adafruit_details.py  test_driver.py  test_fast_library.py  test_i2c.py  test_i2c_1mhz.py  test_i2c_speeds.py  thermal_tyre_pico.py  thermal_tyre_pico_fast.py  visualizer.py
pico/c_version/: BUILD.md  CMakeLists.txt  PERFORMANCE_COMPARISON.md  QUICKSTART.md  README.md  VISUALIZER.md  build_and_flash.sh  communication.c  communication.h  download_mlx_library.sh  i2c_slave.c  i2c_slave.h  main.c  test_i2c_scan.c  test_minimal.c  test_mlx_simple.c  test_mlx_with_detection.c  thermal_algorithm.c  thermal_algorithm.h  visualizer.py
pico/c_version/mlx90640/: MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h
thermal_tyre_driver/: __init__.py
